TEST_PROGRAMS/INVALID/05/blank_package.go
/* Blank package. */

package // Error: Must specify a package name

var t int
